[package]
name = "mcdreee"
authors = ["alex3236"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = "1.14.0"
futures-util = "0.3.14"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
indicatif = "0.17"

terminal-menu = "3.0.0"
crossterm = "0.25.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.10.3"
pep440_rs = "0.4.0"

thiserror = "1"

rust-i18n = "3"
sys-locale = "0.3.1"

[build-dependencies]
static_vcruntime = "2.0"
